log/build_2024-03-01_16-10-30/ar_slam_base/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/GTL/wxu/cs7630_g6/install/ar_slam_base/lib/python3.10/site-packages/ar_slam_base/mapping_kf.py", line 114
    logger.info("shape of H:_rr " + str(H_rr.shape), "shape of self.X: " + str(self.X)
               ^
SyntaxError: '(' was never closed

